--- a/.github/workflows/osm-sync.yml
+++ b/.github/workflows/osm-sync.yml
@@ -2,8 +2,8 @@ name: VibeCity OSM Sync
 
 on:
   schedule:
-    # Run every 15 minutes — enterprise sync cadence
-    - cron: '*/15 * * * *'
+    # Run every 5 minutes for near-real-time updates.
+    - cron: '*/5 * * * *'
   workflow_dispatch: # Allow manual trigger
 
 permissions:
@@ -16,7 +16,7 @@ concurrency:
 jobs:
   sync:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 20
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -26,26 +26,46 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Preflight required secrets
+        id: preflight
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+        run: |
+          set -euo pipefail
+          MISSING=()
+          [ -n "${SUPABASE_URL:-}" ] || MISSING+=("SUPABASE_URL")
+          [ -n "${SUPABASE_SERVICE_ROLE_KEY:-}" ] || MISSING+=("SUPABASE_SERVICE_ROLE_KEY")
+          if [ "${#MISSING[@]}" -gt 0 ]; then
+            echo "::warning::Skipping OSM sync. Missing required secrets: ${MISSING[*]}"
+            echo "can_run=false" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+          echo "can_run=true" >> "$GITHUB_OUTPUT"
+
       - name: Install dependencies
+        if: ${{ steps.preflight.outputs.can_run == 'true' }}
         run: |
           python -m pip install --upgrade pip
           pip install redis "h3>=4.0.0" supabase requests python-dotenv fakeredis asyncpg
 
       - name: Run OSM Sync (Short Batch)
+        if: ${{ steps.preflight.outputs.can_run == 'true' }}
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
           REDIS_URL: ${{ secrets.REDIS_URL }}
           ALLOW_FAKE_REDIS: "false"
-          WORKERS: 6
+          WORKERS: ${{ vars.OSM_SYNC_WORKERS || '6' }}
           TILE_Z: 9
-        # Run loop=8 to compensate for 15-min interval (more tiles per run)
-        # The script is incremental, so next run picks up where it left off.
+          LOOP_ITERATIONS: ${{ vars.OSM_SYNC_LOOP_ITERATIONS || '3' }}
+        # Keep each run short; high cadence covers freshness.
         run: |
           set -euo pipefail
-          python backend/scripts/osm_sync_ultimate.py --loop=8 | tee osm_sync.log
+          python backend/scripts/osm_sync_ultimate.py --loop="${LOOP_ITERATIONS}" | tee osm_sync.log
 
       - name: Contract Validation
+        if: ${{ steps.preflight.outputs.can_run == 'true' }}
         env:
           SUPABASE_DIRECT_URL: ${{ secrets.SUPABASE_DIRECT_URL }}
         run: |
@@ -58,6 +78,7 @@ jobs:
           fi
 
       - name: Verify OSM Ingestion (Workflow DB vs Production API)
+        if: ${{ steps.preflight.outputs.can_run == 'true' }}
         continue-on-error: true   # ⚠️ soft-fail: don't block the sync run
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
