--- a/.github/workflows/supabase-db-pull.yml
+++ b/.github/workflows/supabase-db-pull.yml
@@ -2,19 +2,26 @@ name: Supabase DB Pull
 
 on:
   schedule:
-    - cron: "0 19 * * *"
+    - cron: "*/5 * * * *"
   workflow_dispatch:
+    inputs:
+      fail_on_link_error:
+        description: "Fail run when Supabase auth/link fails"
+        required: false
+        default: false
+        type: boolean
 
 permissions:
   contents: write
 
 concurrency:
   group: supabase-db-pull
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
   pull-schema:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,25 +34,68 @@ jobs:
           version: latest
 
       - name: Authenticate and link project
+        id: link_project
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
           SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
           SUPABASE_PROJECT_REF: ${{ vars.SUPABASE_PROJECT_REF }}
+          SUPABASE_PROJECT_ID: ${{ vars.SUPABASE_PROJECT_ID }}
+          SUPABASE_PROJECT_ID_SECRET: ${{ secrets.SUPABASE_PROJECT_ID }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          FAIL_ON_LINK_ERROR: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.fail_on_link_error || 'false' }}
         run: |
           set -euo pipefail
-          if [ -z "${SUPABASE_ACCESS_TOKEN:-}" ]; then
-            echo "Missing secret: SUPABASE_ACCESS_TOKEN"
-            exit 1
+
+          PROJECT_REF="${SUPABASE_PROJECT_REF:-}"
+          if [ -z "${PROJECT_REF}" ]; then
+            PROJECT_REF="${SUPABASE_PROJECT_ID:-}"
           fi
-          if [ -z "${SUPABASE_DB_PASSWORD:-}" ]; then
-            echo "Missing secret: SUPABASE_DB_PASSWORD"
-            exit 1
+          if [ -z "${PROJECT_REF}" ]; then
+            PROJECT_REF="${SUPABASE_PROJECT_ID_SECRET:-}"
           fi
-          PROJECT_REF="${SUPABASE_PROJECT_REF:-rukyitpjfmzhqjlfmbie}"
-          supabase login --token "${SUPABASE_ACCESS_TOKEN}"
-          supabase link --project-ref "${PROJECT_REF}" --password "${SUPABASE_DB_PASSWORD}"
+          if [ -z "${PROJECT_REF}" ] && [ -n "${SUPABASE_URL:-}" ]; then
+            HOST="$(printf '%s' "${SUPABASE_URL}" | sed -E 's#https?://([^/]+)/?.*#\1#')"
+            if [[ "${HOST}" == *.supabase.* ]]; then
+              PROJECT_REF="${HOST%%.*}"
+            fi
+          fi
+
+          MISSING=()
+          [ -n "${SUPABASE_ACCESS_TOKEN:-}" ] || MISSING+=("SUPABASE_ACCESS_TOKEN")
+          [ -n "${SUPABASE_DB_PASSWORD:-}" ] || MISSING+=("SUPABASE_DB_PASSWORD")
+          [ -n "${PROJECT_REF:-}" ] || MISSING+=("SUPABASE_PROJECT_REF|SUPABASE_PROJECT_ID|SUPABASE_URL")
+
+          if [ "${#MISSING[@]}" -gt 0 ]; then
+            echo "::warning::Skipping db pull. Missing inputs: ${MISSING[*]}"
+            echo "linked=false" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          if ! supabase login --token "${SUPABASE_ACCESS_TOKEN}"; then
+            if [ "${FAIL_ON_LINK_ERROR}" = "true" ]; then
+              echo "::error::supabase login failed."
+              exit 1
+            fi
+            echo "::warning::supabase login failed; skipping db pull for this run."
+            echo "linked=false" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          if ! supabase link --project-ref "${PROJECT_REF}" --password "${SUPABASE_DB_PASSWORD}"; then
+            if [ "${FAIL_ON_LINK_ERROR}" = "true" ]; then
+              echo "::error::supabase link failed for project_ref=${PROJECT_REF}."
+              exit 1
+            fi
+            echo "::warning::supabase link failed for project_ref=${PROJECT_REF}; skipping db pull for this run."
+            echo "linked=false" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          echo "linked=true" >> "$GITHUB_OUTPUT"
+          echo "project_ref=${PROJECT_REF}" >> "$GITHUB_OUTPUT"
 
       - name: Pull remote schema
+        if: ${{ steps.link_project.outputs.linked == 'true' }}
         shell: bash
         run: |
           set -euo pipefail
@@ -66,6 +116,7 @@ jobs:
           exit 1
 
       - name: Commit and push migration changes
+        if: ${{ steps.link_project.outputs.linked == 'true' }}
         run: |
           set -euo pipefail
           if git diff --quiet -- supabase/migrations; then
@@ -77,3 +128,17 @@ jobs:
           git add supabase/migrations
           git commit -m "chore(db): automated supabase db pull"
           git push
+
+      - name: Append workflow summary
+        if: always()
+        run: |
+          {
+            echo "## Supabase DB Pull"
+            echo ""
+            if [ "${{ steps.link_project.outputs.linked }}" = "true" ]; then
+              echo "- Linked project ref: \`${{ steps.link_project.outputs.project_ref }}\`"
+            else
+              echo "- Skipped schema pull because Supabase auth/link was unavailable for this run."
+              echo "- Provide valid \`SUPABASE_ACCESS_TOKEN\`, \`SUPABASE_DB_PASSWORD\`, and \`SUPABASE_PROJECT_REF\` (or \`SUPABASE_PROJECT_ID\` / \`SUPABASE_URL\`)."
+            fi
+          } >> "$GITHUB_STEP_SUMMARY"
